# vnlc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/demo/: main.vnl  (+1 more)
src/: CMakeLists.txt  main.cpp
src/app/: VnlcApp.cpp  VnlcApp.hpp
src/ast/: VnlcAdditionAssignmentExpressionNode.cpp  VnlcAdditionAssignmentExpressionNode.hpp  VnlcAdditionExpressionNode.cpp  VnlcAdditionExpressionNode.hpp  VnlcAssignmentExpressionNode.cpp  VnlcAssignmentExpressionNode.hpp  VnlcAstNode.cpp  VnlcAstNode.hpp  VnlcBinaryExpressionType.hpp  VnlcBitwiseAndAssignmentExpressionNode.cpp  VnlcBitwiseAndAssignmentExpressionNode.hpp  VnlcBitwiseAndExpressionNode.cpp  VnlcBitwiseAndExpressionNode.hpp  VnlcBitwiseNotExpressionNode.cpp  VnlcBitwiseNotExpressionNode.hpp  VnlcBitwiseOrAssignmentExpressionNode.cpp  VnlcBitwiseOrAssignmentExpressionNode.hpp  VnlcBitwiseOrExpressionNode.cpp  VnlcBitwiseOrExpressionNode.hpp  VnlcBitwiseXorAssignmentExpressionNode.cpp  VnlcBitwiseXorAssignmentExpressionNode.hpp  VnlcBitwiseXorExpressionNode.cpp  VnlcBitwiseXorExpressionNode.hpp  VnlcBlockStatementNode.hpp  VnlcConditionalExpressionNode.cpp  VnlcConditionalExpressionNode.hpp  VnlcDeclarationNode.cpp  VnlcDeclarationNode.hpp  VnlcDictLiteralNode.cpp  VnlcDictLiteralNode.hpp  VnlcDivisionAssignmentExpressionNode.cpp  VnlcDivisionAssignmentExpressionNode.hpp  VnlcDivisionExpressionNode.cpp  VnlcDivisionExpressionNode.hpp  VnlcEqualExpressionNode.cpp  VnlcEqualExpressionNode.hpp  VnlcExponentAssignmentExpressionNode.cpp  VnlcExponentAssignmentExpressionNode.hpp  VnlcExponentExpressionNode.cpp  VnlcExponentExpressionNode.hpp  (+98 more)
src/ast/declaration/: VnlcClassDeclarationNode.cpp  VnlcClassDeclarationNode.hpp  VnlcDeclarationItem.hpp  VnlcDeclarationNode.cpp  VnlcDeclarationNode.hpp  VnlcEnumDeclarationNode.cpp  VnlcEnumDeclarationNode.hpp  VnlcEnumMemberDeclarationNode.cpp  VnlcEnumMemberDeclarationNode.hpp  VnlcExportDeclarationItem.hpp  VnlcExportDeclarationNode.cpp  VnlcExportDeclarationNode.hpp  VnlcFunctionDeclarationNode.cpp  VnlcFunctionDeclarationNode.hpp  VnlcFunctionDeclarationType.hpp  VnlcImportDeclarationItem.hpp  VnlcImportDeclarationNode.cpp  VnlcImportDeclarationNode.hpp  VnlcInterfaceDeclarationNode.cpp  VnlcInterfaceDeclarationNode.hpp  VnlcPropertyDeclarationNode.cpp  VnlcPropertyDeclarationNode.hpp  VnlcPropertyDeclarationType.hpp  VnlcTypeAliasDeclarationNode.cpp  VnlcTypeAliasDeclarationNode.hpp  VnlcTypeDeclarationNode.cpp  VnlcTypeDeclarationNode.hpp  VnlcValueDeclarationNode.cpp  VnlcValueDeclarationNode.hpp  VnlcValueDeclarationType.hpp  VnlcVariableDeclarationNode.cpp  VnlcVariableDeclarationNode.hpp  VnlcVariableDeclarationType.hpp
src/ast/expression/: VnlcBinaryExpressionNode.cpp  VnlcBinaryExpressionNode.hpp  VnlcBinaryExpressionType.hpp  VnlcConditionalExpressionNode.hpp  VnlcDictLiteralExpressionNode.cpp  VnlcDictLiteralExpressionNode.hpp  VnlcExpressionNode.cpp  VnlcExpressionNode.hpp  VnlcFunctionCallExpressionNode.cpp  VnlcFunctionCallExpressionNode.hpp  VnlcIdentifierExpressionNode.hpp  VnlcListLikeLiteralExpressionNode.hpp  VnlcListLikeLiteralExpressionType.hpp  VnlcLiteralExpressionNode.cpp  VnlcLiteralExpressionNode.hpp  VnlcMemberAccessExpressionNode.hpp  VnlcMemberAccessExpressionType.hpp  VnlcPrimaryExpressionNode.cpp  VnlcPrimaryExpressionNode.hpp  VnlcRangeExpressionNode.hpp  VnlcSelectorLiteralExpressionNode.hpp  VnlcSelectorLiteralExpressionType.hpp  VnlcSimpleLiteralExpressionNode.cpp  VnlcSimpleLiteralExpressionNode.hpp  VnlcSimpleLiteralExpressionType.hpp  VnlcStringLiteralExpressionNode.cpp  VnlcStringLiteralExpressionNode.hpp  VnlcStringLiteralExpressionType.hpp  VnlcSubscriptExpressionNode.hpp  VnlcSuperExpressionNode.cpp  VnlcSuperExpressionNode.hpp  VnlcThisExpressionNode.cpp  VnlcThisExpressionNode.hpp  VnlcUnaryExpressionNode.cpp  VnlcUnaryExpressionNode.hpp  VnlcUnaryExpressionType.hpp
src/ast/module/: VnlcModuleNode.cpp  VnlcModuleNode.hpp
src/ast/other/: VnlcTypeAnnotationNode.cpp  VnlcTypeAnnotationNode.hpp  VnlcTypeNode.cpp  VnlcTypeNode.hpp
src/ast/statement/: VnlcBlockStatementNode.cpp  VnlcBlockStatementNode.hpp  VnlcBreakStatementNode.cpp  VnlcBreakStatementNode.hpp  VnlcContinueStatementNode.cpp  VnlcContinueStatementNode.hpp  VnlcControlFlowStatementNode.cpp  VnlcControlFlowStatementNode.hpp  VnlcExpressionStatementNode.cpp  VnlcExpressionStatementNode.hpp  VnlcForStatementNode.cpp  VnlcForStatementNode.hpp  VnlcIfStatementNode.cpp  VnlcIfStatementNode.hpp  VnlcLoopStatementNode.cpp  VnlcLoopStatementNode.hpp  VnlcReloadStatementNode.cpp  VnlcReloadStatementNode.hpp  VnlcReturnStatementNode.cpp  VnlcReturnStatementNode.hpp  VnlcStatementNode.cpp  VnlcStatementNode.hpp  VnlcSwitchStatementItem.hpp  VnlcSwitchStatementNode.cpp  VnlcSwitchStatementNode.hpp  VnlcSwitchStatementType.hpp  VnlcVariableDeclarationStatementNode.cpp  (+3 more)
src/config/: VnlcConfig.hpp  VnlcRunningMode.hpp
src/diagnostic/: VnlcDiagnostic.cpp  VnlcDiagnostic.hpp  VnlcDiagnosticPhase.hpp  VnlcDiagnosticSeverity.hpp
src/environment/: VnlcEnvironment.cpp  VnlcEnvironment.hpp
src/error/: VnlcAstConstructionError.hpp  VnlcError.hpp  VnlcIllegalInputError.hpp  VnlcIllegalModuleOrPackageNameError.hpp  VnlcInternalError.hpp  VnlcModuleNameConfictError.hpp  VnlcModuleNameConflictError.hpp  VnlcOutOfRangeError.hpp  VnlcPackageNameConflictError.hpp  VnlcSyntaxError.hpp
src/lexer/: VnlcLexer.cpp  VnlcLexer.hpp  VnlcLexerMode.hpp
src/log/: VnlcLogger.cpp  VnlcLogger.hpp
src/parser/: VnlcParser.cpp  VnlcParser.hpp
src/semantic/: VnlcScope.cpp  VnlcScope.hpp  VnlcSemanticAnalysisResult.cpp  VnlcSemanticAnalysisResult.hpp  VnlcSemanticAnalyzer.cpp  VnlcSemanticAnalyzer.hpp  VnlcSemanticContext.cpp  VnlcSemanticContext.hpp  VnlcSymbol.cpp  VnlcSymbol.hpp  VnlcSymbolKind.hpp  VnlcSymbolOrigin.hpp
src/session/: VnlcSession.cpp  VnlcSession.hpp
src/token/: VnlcToken.cpp  VnlcToken.hpp  VnlcTokenType.hpp
src/util/: VnlcRunningModeUtil.cpp  VnlcRunningModeUtil.hpp  VnlcTokenTypeUtil.cpp  VnlcTokenTypeUtil.hpp
tests/: CMakeLists.txt  VnlcLexerTest.cpp  VnlcParserTest.cpp
(+144 files in other folders)
