add_executable(
    vnlc
    main.cpp
    app/VnlcApp.cpp
    lexer/VnlcLexer.cpp
    log/VnlcLogger.cpp
    session/VnlcSession.cpp
    token/VnlcToken.cpp
    util/VnlcRunningModeUtil.cpp
    util/VnlcTokenTypeUtil.cpp
    ast/VnlcAstNode.cpp
    ast/VnlcBinaryExpressionNode.cpp
    ast/VnlcConditionalExpressionNode.cpp
    ast/VnlcExpressionNode.cpp
    ast/VnlcFunctionCallExpressionNode.cpp
    ast/VnlcIdentifierExpressionNode.cpp
    ast/VnlcLiteralExpressionNode.cpp
    ast/VnlcMemberAccessExpressionNode.cpp
    ast/VnlcPrimaryExpressionNode.cpp
    ast/VnlcRangeExpressionNode.cpp
    ast/VnlcSubscriptExpressionNode.cpp
    ast/VnlcUnaryExpressionNode.cpp
    ast/VnlcStringLiteralExpressionNode.cpp
    ast/VnlcSimpleLiteralExpressionNode.cpp
    ast/VnlcListLikeLiteralExpressionNode.cpp
    ast/VnlcDictLiteralExpressionNode.cpp
    ast/VnlcSelectorLiteralExpressionNode.cpp
    ast/VnlcDeclarationNode.cpp
)

target_link_libraries(
    vnlc
    PRIVATE
    fmt::fmt
    nlohmann_json::nlohmann_json
    CLI11::CLI11
)
