add_executable(
    vnlc
    main.cpp
    app/VnlcApp.cpp
    lexer/VnlcLexer.cpp
    log/VnlcLogger.cpp
    session/VnlcSession.cpp
    token/VnlcToken.cpp
    util/VnlcRunningModeUtil.cpp
    util/VnlcTokenTypeUtil.cpp
    ast/VnlcAstNode.cpp
    ast/expression/VnlcBinaryExpressionNode.cpp
    ast/expression/VnlcConditionalExpressionNode.cpp
    ast/expression/VnlcExpressionNode.cpp
    ast/expression/VnlcFunctionCallExpressionNode.cpp
    ast/expression/VnlcIdentifierExpressionNode.cpp
    ast/expression/VnlcLiteralExpressionNode.cpp
    ast/expression/VnlcMemberAccessExpressionNode.cpp
    ast/expression/VnlcPrimaryExpressionNode.cpp
    ast/expression/VnlcRangeExpressionNode.cpp
    ast/expression/VnlcSubscriptExpressionNode.cpp
    ast/expression/VnlcUnaryExpressionNode.cpp
    ast/expression/VnlcStringLiteralExpressionNode.cpp
    ast/expression/VnlcSimpleLiteralExpressionNode.cpp
    ast/expression/VnlcListLikeLiteralExpressionNode.cpp
    ast/expression/VnlcDictLiteralExpressionNode.cpp
    ast/expression/VnlcSelectorLiteralExpressionNode.cpp
    ast/declaration/VnlcDeclarationNode.cpp
    ast/declaration/VnlcFunctionDeclarationNode.cpp
    ast/declaration/VnlcVariableDeclarationNode.cpp
    ast/statement/VnlcStatementNode.cpp
    ast/statement/VnlcBlockStatementNode.cpp
    ast/other/VnlcTypeAnnotationNode.cpp
)

target_link_libraries(
    vnlc
    PRIVATE
    fmt::fmt
    nlohmann_json::nlohmann_json
    CLI11::CLI11
)
