add_executable(
    vnlc
    main.cpp
    app/VnlcApp.cpp
    lexer/VnlcLexer.cpp
    log/VnlcLogger.cpp
    session/VnlcSession.cpp
    token/VnlcToken.cpp
    util/VnlcRunningModeUtil.cpp
    util/VnlcTokenTypeUtil.cpp
    ast/VnlcAstNode.cpp
    ast/module/VnlcModuleNode.cpp
    ast/expression/VnlcBinaryExpressionNode.cpp
    ast/expression/VnlcConditionalExpressionNode.cpp
    ast/expression/VnlcExpressionNode.cpp
    ast/expression/VnlcFunctionCallExpressionNode.cpp
    ast/expression/VnlcIdentifierExpressionNode.cpp
    ast/expression/VnlcLiteralExpressionNode.cpp
    ast/expression/VnlcMemberAccessExpressionNode.cpp
    ast/expression/VnlcPrimaryExpressionNode.cpp
    ast/expression/VnlcRangeExpressionNode.cpp
    ast/expression/VnlcSubscriptExpressionNode.cpp
    ast/expression/VnlcUnaryExpressionNode.cpp
    ast/expression/VnlcStringLiteralExpressionNode.cpp
    ast/expression/VnlcSimpleLiteralExpressionNode.cpp
    ast/expression/VnlcListLikeLiteralExpressionNode.cpp
    ast/expression/VnlcDictLiteralExpressionNode.cpp
    ast/expression/VnlcSelectorLiteralExpressionNode.cpp
    ast/expression/VnlcThisExpressionNode.cpp
    ast/expression/VnlcSuperExpressionNode.cpp
    ast/declaration/VnlcDeclarationNode.cpp
    ast/declaration/VnlcTypeDeclarationNode.cpp
    ast/declaration/VnlcFunctionDeclarationNode.cpp
    ast/declaration/VnlcVariableDeclarationNode.cpp
    ast/declaration/VnlcTypeAliasDeclarationNode.cpp
    ast/declaration/VnlcPropertyDeclarationNode.cpp
    ast/declaration/VnlcClassDeclarationNode.cpp
    ast/declaration/VnlcInterfaceDeclarationNode.cpp
    ast/declaration/VnlcEnumMemberDeclarationNode.cpp
    ast/declaration/VnlcEnumDeclarationNode.cpp
    ast/declaration/VnlcImportDeclarationNode.cpp
    ast/declaration/VnlcExportDeclarationNode.cpp
    ast/statement/VnlcStatementNode.cpp
    ast/statement/VnlcBlockStatementNode.cpp
    ast/statement/VnlcExpressionStatementNode.cpp
    ast/statement/VnlcVariableDeclarationStatementNode.cpp
    ast/statement/VnlcControlFlowStatementNode.cpp
    ast/statement/VnlcIfStatementNode.cpp
    ast/statement/VnlcLoopStatementNode.cpp
    ast/statement/VnlcWhileStatementNode.cpp
    ast/statement/VnlcForStatementNode.cpp
    ast/statement/VnlcReturnStatementNode.cpp
    ast/statement/VnlcBreakStatementNode.cpp
    ast/statement/VnlcContinueStatementNode.cpp
    ast/statement/VnlcReloadStatementNode.cpp
    ast/statement/VnlcSwitchStatementNode.cpp
    ast/other/VnlcTypeAnnotationNode.cpp
    ast/other/VnlcTypeNode.cpp
    parser/VnlcParser.cpp
    diagnostic/VnlcDiagnostic.cpp
    semantic/VnlcSymbol.cpp
    semantic/VnlcSemanticContext.cpp
    semantic/VnlcSemanticAnalysisResult.cpp
    semantic/VnlcSemanticAnalyzer.cpp
)

target_link_libraries(
    vnlc
    PRIVATE
    fmt::fmt
    nlohmann_json::nlohmann_json
    CLI11::CLI11
)
